Added sitebasurl to navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,18 @@
 </head>
 
 <body>
+	<header>
+		<h1>ESTHER-MAGNET</h1>
+	</header>
+
+	<nav>
+		<ul>
+			<li><a href="{{site.baseurl}}/index.html">Home</a></li>
+			<li><a href="{{site.baseurl}}/news.html">News</a></li>
+		</ul>
+	</nav>
+
+
 	{{content}}
 </body>
 <html>
