--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>ESTHER-MAGNET</title>
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/common.css">
 </head>
 
 <body>
@@ -10,17 +11,12 @@
 		<h1>ESTHER-MAGNET</h1>
 	</header>
 
-	<nav>
-		<ul>
-			<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-			<li><a href="{{site.baseurl}}/news.html">News</a></li>
-		</ul>
-	</nav>
-
+	{% include nav.html %}
 
 	{{content}}
 
 	<footer>
+		{% include nav.html %}
 		<p>© Institute of Public Health, Heidelberg University</p>
 	</footer>
 
