Updated nav in common.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,12 @@
 		<h1>ESTHER-MAGNET</h1>
 	</header>
 
-	{% include nav.html %}
+	{% include nav.html navclass='nav-top'%}
 
 	{{content}}
 
 	<footer>
-		{% include nav.html %}
+		{% include nav.html navclass='nav-bottom'%}
 		<p>© Institute of Public Health, Heidelberg University</p>
 	</footer>
 
