--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-	<ul>
+	<ul class="nav {{include.navclass}}">
 		<li><a href="{{site.baseurl}}/index.html" class="{% if page.url == '/index.html'%}current{% endif %}">Home</a></li>
 		<li><a href="{{site.baseurl}}/project.html" class="{% if page.url == '/project.html'%}current{% endif %}">Project</a></li>
 		<li><a href="{{site.baseurl}}/team.html" class="{% if page.url == '/team.html'%}current{% endif %}">Team</a></li>
