--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,10 +2,10 @@
 	<ul class="nav {{include.navclass}}">
 		<li><a href="{{site.baseurl}}/index.html" class="{% if page.url == '/index.html'%}current{% endif %}">Home</a></li>
 
-		<li><a href="{{site.baseurl}}/project.html" class="{% if page.url contains 'project' or page.url contains 'team' or page.url contains 'materials' %}current{% endif %}">Project</a></li>
+		<li><a href="{{site.baseurl}}/project/" class="{% if page.url contains 'project' or page.url contains 'team' or page.url contains 'materials' %}current{% endif %}">Project</a></li>
 
-		<li><a href="{{site.baseurl}}/elearning.html" class="{% if page.url == '/elearning.html' %}current{% endif %}">E-Learning</a></li>
+		<li><a href="{{site.baseurl}}/elearning/" class="{% if page.url contains 'elearning' %}current{% endif %}">E-Learning</a></li>
 
-		<li><a href="{{site.baseurl}}/contact.html" class="{% if page.url == '/contact.html'%}current{% endif %}">Contact</a></li>
+		<li><a href="{{site.baseurl}}/contact" class="{% if page.url contains'contact'%}current{% endif %}">Contact</a></li>
 	</ul>
 </nav>
