Changed member pages.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,7 +6,7 @@ layout: default
 
 <nav>
 	<ul>
-		<li><a href="{{site.baseurl}}/team.html">Team</a></li>
+		<li><a href="{{site.baseurl}}/project/team">Team</a></li>
 		<li><a href="{{site.baseurl}}/materials.html">Materials</a></li>
 	</ul>
 
