--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,10 @@
 </head>
 
 <body>
-	<header>
+	<header class="masthead">
 		<h1>ESTHER-MAGNET</h1>
+		{% include nav.html navclass='nav-top'%}
 	</header>
-
-	{% include nav.html navclass='nav-top'%}
 
 	{{content}}
 
