--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,7 +7,7 @@ layout: default
 <nav>
 	<ul>
 		<li><a href="{{site.baseurl}}/project/team">Team</a></li>
-		<li><a href="{{site.baseurl}}/materials.html">Materials</a></li>
+		<li><a href="{{site.baseurl}}/project/materials">Materials</a></li>
 	</ul>
 
 </nav>
