--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>ESTHER-MAGNET</title>
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/common.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/main.css">
 </head>
 
 <body>
