--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,9 @@
 <html lang="en-ca">
 <head>
 	<meta charset="utf-8">
-	<title>ESTHER-MAGNET</title>
+	<title>{% if page.title %}{{page.title}} - {% endif %}ESTHER-MAGNET</title>
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/main.css">
+	<meta name="description" content="{{page.meta}}">
 </head>
 
 <body>
